# shtrausslearning.github.io

./: 404.html  Makefile  README.md  about.html  bio-portfolio.html  friends.md  index.html  index.md  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build-docs.yml  main.yaml  main.yml  make-page.yml
about/: index.html  index.md
assets/css/: main.css  style.css
assets/js/: main.js
assets/stylesheets/: main.5136944a.min.css  main.7073df5a.min.css
bio-portfolio/: index.html
blog/: index.html
blog/archive/: 2023.html  2024.html
blog/category/: business.html  code-model.html  (+17 more)
docs/: about.md  hello-world.md  index.md  mkdocs.yml
docs_src/: generate_simpleicons_css.py
ds-portfolio/: index.html
includes/: abbreviations.md
javascripts/: extra.js
mllibs/: about.html  about.md  index.html  install.html  iterative.html  releases.html  status.html
mllibs-home/: index.html
notebooks/: index.html  index.md
overrides/: about.html  home.html  macros.html  projet_template.html  work.html
personal/: index.html
portfolio/: biology.html  business.html  financial.html  financial.md  geospatial.html  health.html  health.md  index.html  index.md  internships.html  nlp.html  nlp.md  physics.html  physics.md  projects.html  pyspark_basics.html  recsys.html
proj_mllibs/: index.html  index.md
schemas/: friends-schema.json  other_projects-schema.json  projects_index-schema.json
search/: search_index.js  search_index.json
site/: 404.html  index.html  sitemap.xml
stylesheets/: customize.css  extra.css  simpleicons.css
(+768 files in other folders)
