[project]
name = "arv-anshul-github-io"
version = "0.1.0"
description = "My personal website using `mkdocs-material`."
authors = [{ name = "Anshul Raj Verma", email = "arv.anshul.1864@gamail.com" }]
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "mkdocs-markdownextradata-plugin==0.2.5",
    "mkdocs-material==9.5.17",
    "simpleicons==7.21.0",
]

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.rye.scripts]
simpleicons = "python -m docs_src.generate_simpleicons_css"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "B",
    "BLE",
    "C4",
    "C90",
    "E",
    "F",
    "I",
    "ICN",
    "INP",
    "ISC",
    "PGH",
    "PIE",
    "PTH",
    "Q",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "TCH",
    "UP",
    "W",
    "YTT",
]
extend-ignore = [
    "B008",
    "B905",
    "E501",
    "E741",
    "INP001",
    "ISC001",
    "N818",
    "PGH003",
    "S101",
    "S301",
    "UP035",
]
extend-unfixable = ["B", "F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
